<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- android:background="@android:color/background_dark" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/my_custom_background"
            android:gravity="center" >

            <Button
                android:id="@+id/ic_action_file_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/form_button_file_selector" />

            <Button
                android:id="@+id/ic_action_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/form_button_camera" />

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/dummy_string" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_form_code" />

            <EditText
                android:id="@+id/product_form_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_form_code" />

            <TextView
                style="@style/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_form_description" />

            <EditText
                android:id="@+id/product_form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_form_description" />

            <TextView
                style="@style/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_form_price" />

            <EditText
                android:id="@+id/product_form_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_form_price"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_form_quantity" />

            <EditText
                android:id="@+id/product_form_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_form_quantity"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>